objects/TLG_Integration_Submission__c.object
<CustomObject>
    <label>TLG Integration Submission</label>
    <nameField>
        <displayFormat>TIS{000000}</displayFormat>
        <label>TLG Integration Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TLG Integration Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>json__c</fullName>
        <label>json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Name__c</fullName>
        <label>Interface Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>